--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <title>sbNext</title>
 <link rel="stylesheet" href="/assets/main.css"> 
+{% block customcss %}{% endblock %}
 </head>
 <body>
 <div id="header">
