--- a/templates/new/gordon.twig
+++ b/templates/new/gordon.twig
@@ -1,4 +1,12 @@
 {% extends "_layout.twig" %}
+{% block customcss %}
+<style>
+body {
+background: rgb(91,123,162);
+background: linear-gradient(0, rgba(91,123,162,1) 2%, rgba(41,69,106,1) 27%); 
+}
+</style>
+{% endblock %}
 {% block content %}
 <center>
 <img src="https://i.ytimg.com/vi/aLyx9rcMjrc/hqdefault.jpg">
