fix gordon issue on firefox

--- a/templates/new/gordon.twig
+++ b/templates/new/gordon.twig
@@ -4,6 +4,8 @@
 body {
 background: rgb(91,123,162);
 background: linear-gradient(0, rgba(91,123,162,1) 2%, rgba(41,69,106,1) 27%); 
+background-repeat: no-repeat;
+background-attachment: fixed;
 }
 </style>
 {% endblock %}
