begin alpha 4, implement token resetting and the ability to change your password.

--- a/templates/default/settings.twig
+++ b/templates/default/settings.twig
@@ -45,6 +45,33 @@
 						</div>
 					</div>
 				</div>
+				<br/>
+				<h2>{{ __("Security options") }}</h2>
+				<hr/>
+				<h4>{{ __("Change Password") }}</h4>
+				<hr/>
+				<form action="settings.php" method="post" enctype="multipart/form-data">
+					<div class="form-floating">
+						<input type="password" name="current_pass" class="form-control" id="floatingCurrentPass" placeholder="">
+						<label for="floatingCurrentPass">{{ __("Current Password") }}</label>
+					</div>
+					<div class="form-floating">
+						<input type="password" name="pass" class="form-control" id="floatingPass" placeholder="">
+						<label for="floatingPass">{{ __("Password") }}</label>
+					</div>
+					<div class="form-floating">
+						<input type="password" name="pass2" class="form-control" id="floatingPass2" placeholder="">
+						<label for="floatingPass2">{{ __("Password (Again)") }}</label>
+					</div>
+					<button class="w-100 btn btn-lg btn-primary" type="submit" name="updatesettings" class="btn btn-primary">{{ __("Change") }}</button>
+				</form>
+				<br/>
+				<h4>{{ __("Other") }}</h4>
+				<hr/>
+				<form action="settings.php" method="post" enctype="multipart/form-data">
+					<input type="hidden" name="reset_token" class="form-control" id="floatingCurrentPass" value="resetToken">
+					<button class="w-100 btn btn-lg btn-danger" type="submit" name="updatesettings" class="btn btn-primary">{{ __("Log out from all devices") }}</button>
+				</form>
 			</div>
 			<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
 				<div class="p-4 bg-light border rounded-3">
