--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -30,7 +30,7 @@
 			</p>
 		{% else %}
 			<h3>{{ __("Welcome to squareBracket") }}</h3>
-			<p>{{ __("Yet another website where you can upload your videos.") }}</p>
+			<p>{{ __("I can't believe it's not PokTube") }}</p>
 			<div class="btn-group">
 				<a href="register.php" class="btn btn-primary">{{ __("Get started") }}</a>
 				<a href="login.php" class="btn btn-secondary">{{ __("Sign in") }}</a>
@@ -38,8 +38,8 @@
 		{% endif %}
 		<hr/>
 		<h3>{{ __("News and updates") }}</h3>
-		<b><p class="text-danger">{{ __("URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.") }}</p></b>
-		<p>{{ __("Due to revivals now having a lower reputation, we have decided to scrap 2006L and replace it with sbNext. Also, we're most likely not going to bother importing any PokTube videos onto squareBracket.") }}</p>
+		<p>{{ __("squareBracket's now in pre-beta. We're working on sbNext which should hopefully replace the current Bootstrap 5 (yes) layout.") }}</p>
+		<p class="text-danger">{{ __("If you have an account on both AIM Phoenix and squareBracket, we recommend changing your passwords due to a database leak that happended a while back.") }}</p>
 		<p class="blockquote-footer">{{ __("Gamerappa") }}</p>
 		<hr/>
 		<h3>{{ __("Featured videos") }}</h3>
