start work on  visual changes

--- a/bootstrap/_variables-test.scss
+++ b/bootstrap/_variables-test.scss
@@ -29,9 +29,9 @@ $enable-responsive-font-sizes: true;
 $secondary: $gray-200;
 $enable-hover-media-query: true;
 $enable-shadows: true;
-$enable-transitions: true;
+$enable-transitions: false;
 $link-decoration: none;
-$font-family-sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 0.875rem;
 $h1-font-size: $font-size-base * 2.6;
 $h2-font-size: $font-size-base * 2.15;
