--- a/bootstrap/custom-test.scss
+++ b/bootstrap/custom-test.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
-
 //
 // Buttons
 // --------------------------------------------------
@@ -12,14 +10,14 @@
 
   &:hover,
   &:focus  {
-    //Hack to fix the smooth fade between hover and normal button style.
-    @include gradient-y($start-color: darken($btn-color, 12%), $end-color: darken($btn-color, 12%));
+    background-color: darken($btn-color, 12%);
+    background-position: 0 -15px;
   }
 
   &:active,
   &.active {
     background-color: darken($btn-color, 12%);
-	border-color: darken($btn-color, 14%);
+    border-color: darken($btn-color, 14%);
   }
 
   &.disabled,
