--- a/templates/default/_layout-admin.twig
+++ b/templates/default/_layout-admin.twig
@@ -6,10 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% block head %}{% endblock %}
 	{% if theme != 'vanilla' %}
-	<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% endif %}.css" type="text/css">
+	<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% elseif theme == 'finalium' %}-finalium{% endif %}.css" type="text/css">
 	{% else %}
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	{% endif %}
 	<link rel="stylesheet" id="bootstrap_dashboard" href="bootstrap/dashboard.css" type="text/css">
 	<script src="https://code.jquery.com/jquery-3.6.0.js"
