remove useless hack.

--- a/bootstrap/_variables-finalium.scss
+++ b/bootstrap/_variables-finalium.scss
@@ -34,3 +34,5 @@ $h4-font-size: $font-size-base * 1.5;
 $h5-font-size: $font-size-base * 1.25;
 $h6-font-size: $font-size-base;
 $body-bg: #f0f0f0;
+
+$min-contrast-ratio:   1.50 !default;
