--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -40,6 +40,9 @@ $h4-font-size: $font-size-base * 1.25;
 $h5-font-size: $font-size-base;
 $h6-font-size: $font-size-base * 0.85;
 $body-bg: #e9eaec;
+
+$min-contrast-ratio:   1.50 !default;
+
 $theme-colors: (
   "primary":    $primary,
   "secondary":  $secondary,
