finalium colors + proper(?) like/dislike colors

--- a/bootstrap/_variables-finalium.scss
+++ b/bootstrap/_variables-finalium.scss
@@ -1,8 +1,20 @@
-$primary: #337ab7;
-$success: #5cb85c;
-$info: #5bc0de;
-$warning: #f0ad4e;
-$danger: #d9534f;
+$black: #000;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$red: #ff5252;
+$orange: #fd7e14;
+$yellow: #ffb300;
+$cyan: #17a2b8;
+$blue: #039be5;
+$green: #00b857;
+$poktube-blue: #0051b3;
+$teal: #20c997;
+$primary: $blue;
+$success: $green;
+$info: #ba68c8;
+$warning: $yellow;
+$danger: $red;
 $white: #fff;
 $gray-100: #F8F8F8;
 $gray-200: #EEEEEE;
@@ -12,19 +24,8 @@ $gray-500: #B4B4B4;
 $gray-700: #4F4F4F;
 $gray-800: #393939;
 $gray-900: #242424;
-$light: $gray-100;
-$black: #000;
-$indigo: #371cd4;
-$purple: #523bb8;
-$pink: #eb46a9;
-$orange: #e6a417;
-$yellow: #ebbc15;
-$cyan: #16b6f5;
-$blue: #2b68ad;
-$green: #147a3a;
-$poktube-blue: #0051b3;
-$teal: #20c997;
-$dark: $gray-800;
+$light: #f8f9fa;
+$dark: #343a40;
 $font-family-sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 0.875rem;
 $h1-font-size: $font-size-base * 2.5;
