--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -31,7 +31,7 @@ $enable-hover-media-query: true;
 $enable-shadows: true;
 $enable-transitions: true;
 $link-decoration: none;
-$font-family-sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 0.875rem;
 $h1-font-size: $font-size-base * 2.6;
 $h2-font-size: $font-size-base * 2.15;
