--- a/templates/default/login.twig
+++ b/templates/default/login.twig
@@ -13,23 +13,24 @@
 	{% elseif new_token %}
 		<div class="alert alert-success" role="alert">{{ __("You have been successfully logged out of all devices.") }}</div>
 	{% endif %}
-
-	<form method="post" name="loginForm" id="loginForm" action="login.php">
-		<img class="mb-4" src="/assets/logo.png" alt="squareBracket" width="72">
-		<h3 class="mt-4 mb-4 text-light">{{ __("Login") }}</h3>
-
-		<div class="form-floating my-2">
-			<input type="text" name="username" class="form-control" id="floatingInput" placeholder="name@example.com">
-			<label for="floatingInput">{{ __("Username") }}</label>
-		</div>
-		<div class="form-floating my-2">
-			<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
-			<label for="floatingPassword">{{ __("Password") }}</label>
-		</div>
-
-		<input class="w-100 btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}" name="loginsubmit">
-		<p class="mt-2 text-light">{{ __("Account passwords are hashed with bcrypt.") }}</p>
-		<p class="mt-5 mb-3 text-light">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
-	</form>
+		<form method="post" name="loginForm" id="loginForm" action="login.php">
+			<img class="mb-4" src="/assets/logo.png" alt="squareBracket" width="72">
+			<h3 class="mt-4 mb-4 text-light">{{ __("Login") }}</h3>
+				<div class="card">
+					<div class="card-body">
+						<div class="form-floating my-2">
+							<input type="text" name="username" class="form-control" id="floatingInput" placeholder="name@example.com">
+							<label for="floatingInput">{{ __("Username") }}</label>
+						</div>
+						<div class="form-floating my-2">
+							<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
+							<label for="floatingPassword">{{ __("Password") }}</label>
+						</div>
+						<input class="w-100 btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}" name="loginsubmit">
+					</div>
+				</div>
+			<p class="mt-2 text-light">{{ __("Account passwords are hashed with bcrypt.") }}</p>
+			<p class="mt-5 mb-3 text-light">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
+		</form>
 </main>
 	{% endblock %}
