--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -8,7 +8,7 @@
 			<div class="col-8">
 			<h3>{{ __("Recently uploaded to squareBracket") }}</h3>
 			</div><div class="col-4">
-			<div class="text-end"><a href="browse.php" class="btn btn-secondary btn-sm">More videos</a></div>
+			<div class="text-end"><a href="browse.php" class="btn btn-light btn-sm">More videos</a></div>
 			</div>
 			</div>
 				{% for video in videos %}
@@ -33,7 +33,7 @@
 			<p>{{ __("I can't believe it's not PokTube") }}</p>
 			<div class="btn-group">
 				<a href="register.php" class="btn btn-primary">{{ __("Get started") }}</a>
-				<a href="login.php" class="btn btn-secondary">{{ __("Sign in") }}</a>
+				<a href="login.php" class="btn btn-light">{{ __("Sign in") }}</a>
 			</div>
 		{% endif %}
 		<hr/>
