--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -87,8 +87,8 @@
 						<li class="nav-item"><a href="upload.php" class="nav-link">{{ icon('camera-video', 20) }} {{ __("Upload") }}</a></li>
 						<li class="nav-item"><a href="logout.php" class="nav-link">{{ icon('door-open', 20) }} {{ __("Sign off") }}</a></li>
 					{% else %}
-						<li class="nav-item"><a href="login.php" class="nav-link">{{ icon('key', 20) }} {{ __("Sign in") }}</a></li>
-						<li class="nav-item"><a href="register.php" class="nav-link">{{ icon('pencil-square', 20) }} {{ __("Sign up") }}</a></li>
+						<li class="nav-item"><a href="login.php" class="nav-link">{{ icon('key', 20) }} {{ __("Login") }}</a></li>
+						<li class="nav-item"><a href="register.php" class="nav-link">{{ icon('pencil-square', 20) }} {{ __("Register") }}</a></li>
 					{% endif %}
 				</ul>
 			</div>
