--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -33,12 +33,12 @@
 			<p>{{ __("I can't believe it's not PokTube") }}</p>
 			<div class="btn-group">
 				<a href="register.php" class="btn btn-primary">{{ __("Get started") }}</a>
-				<a href="login.php" class="btn btn-light">{{ __("Sign in") }}</a>
+				<a href="login.php" class="btn btn-light">{{ __("Login") }}</a>
 			</div>
 		{% endif %}
 		<hr/>
 		<h3>{{ __("News and updates") }}</h3>
-		<p>{{ __("squareBracket's now in pre-beta. We're working on sbNext which should hopefully replace the current Bootstrap 5 (yes) layout.") }}</p>
+		<p>{{ __("squareBracket's now in pre-beta. We are working on two redesigns for some reason.") }}</p>
 		<p class="text-danger">{{ __("If you have an account on both AIM Phoenix and squareBracket, we recommend changing your passwords due to a database leak that happended a while back.") }}</p>
 		<p class="blockquote-footer">{{ __("Gamerappa") }}</p>
 		<hr/>
