--- a/bootstrap/signin.css
+++ b/bootstrap/signin.css
@@ -14,6 +14,17 @@ body {
   background-attachment: fixed;
 }
 
+/*@keyframes example {
+  0%   {margin-top:-800px;}
+  100% {margin-top:0;}
+}
+
+
+.login-box {
+  animation-name: example;
+  animation-duration: 1s;
+}*/ 
+
 .form-signin {
   width: 100%;
   max-width: 330px;
