--- a/templates/default/login.twig
+++ b/templates/default/login.twig
@@ -15,7 +15,8 @@
 	{% endif %}
 		<form method="post" name="loginForm" id="loginForm" action="login.php">
 			<img class="mb-4" src="/assets/logo.png" alt="squareBracket" width="72">
-			<h3 class="mt-4 mb-4 text-light">{{ __("Login") }}</h3>
+			<div class="login-box">
+			<h3 class="mb-4 text-light">{{ __("Login") }}</h3>
 				<div class="card">
 					<div class="card-body">
 						<div class="form-floating my-2">
@@ -26,11 +27,15 @@
 							<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
 							<label for="floatingPassword">{{ __("Password") }}</label>
 						</div>
-						<input class="w-100 btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}" name="loginsubmit">
+						<div class="d-grid gap-2 d-md-flex justify-content-between">
+						  <input class="btn btn-lg btn-primary flex-grow-1" type="submit" value="{{ __("Login") }}" name="loginsubmit">
+						  <a class="btn btn-lg btn-light" href="/">Back</a>
+						</div>
 					</div>
 				</div>
 			<p class="mt-2 text-light">{{ __("Account passwords are hashed with bcrypt.") }}</p>
 			<p class="mt-5 mb-3 text-light">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
+			</div>
 		</form>
 </main>
 	{% endblock %}
