--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -38,8 +38,9 @@
 		{% endif %}
 		<hr/>
 		<h3>{{ __("News and updates") }}</h3>
-		<p>{{ __("squareBracket's now in pre-beta. We are working on two redesigns for some reason.") }}</p>
-		<p class="text-danger">{{ __("If you have an account on both AIM Phoenix and squareBracket, we recommend changing your passwords due to a database leak that happended a while back.") }}</p>
+		<p>{{ __("Hello people, we have reached the next stage of development. squareBracket is now in pre-beta. We intend of going to the first beta stage pretty soon.") }}</p>
+		<p>{{ __("It has been reported that SubRocks has one security hole. Mister Bazinga hasen't noticed it and keeps muting the hell out of everyone on SubRocks.") }}</p>
+		<p>{{ __("It went from PokTube having security holes to SubRocks having security holes. The tables have been turned.") }}</p>
 		<p class="blockquote-footer">{{ __("Gamerappa") }}</p>
 		<hr/>
 		<h3>{{ __("Featured videos") }}</h3>
