--- a/bootstrap/_variables-finalium.scss
+++ b/bootstrap/_variables-finalium.scss
@@ -35,5 +35,8 @@ $h4-font-size: $font-size-base * 1.5;
 $h5-font-size: $font-size-base * 1.25;
 $h6-font-size: $font-size-base;
 $body-bg: #f0f0f0;
+$alert-bg-scale: 0%;
+$alert-padding-y: 0.75rem;
+$alert-padding-x: 1.25rem;
 
 $min-contrast-ratio:   1.50 !default;
