--- a/bootstrap/custom-finalium.scss
+++ b/bootstrap/custom-finalium.scss
@@ -8,6 +8,7 @@
 
 @each $state, $value in $theme-colors {
   $alert-background: $value;
+  $alert-border: shift-color($value, $alert-border-scale);
   $alert-color: white;
   @if (contrast-ratio($alert-background, $alert-color) < $min-contrast-ratio) {
     $alert-color: mix($value, color-contrast($alert-background), abs($alert-color-scale));
