add color for greentext for future use

--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -22,6 +22,7 @@ $yellow: #ebbc15;
 $cyan: #16b6f5;
 $blue: #2b68ad;
 $green: #147a3a;
+$olive: #789922;
 $poktube-blue: #0051b3;
 $teal: #20c997;
 $dark: $gray-800;
@@ -52,5 +53,6 @@ $theme-colors: (
   "danger":     $danger,
   "light":      $light,
   "dark":       $dark,
-  "poktube":    $poktube-blue
+  "poktube":    $poktube-blue,
+  "sneed":		$olive,
 );
