--- a/bootstrap/_variables-dark.scss
+++ b/bootstrap/_variables-dark.scss
@@ -24,6 +24,7 @@ $red:     #e74c3c !default;
 $orange:  #ed8b13 !default;
 $yellow:  #ffc32b !default;
 $green:   #00bc8c !default;
+$olive:   #b5bd68 !default;
 $teal:    #20c997 !default;
 $cyan:    #3498db !default;
 
@@ -35,6 +36,18 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-500 !default;
 $dark:          $gray-800 !default;
+
+$theme-colors: (
+  "primary":    $primary,
+  "secondary":  $secondary,
+  "success":    $success,
+  "info":       $info,
+  "warning":    $warning,
+  "danger":     $danger,
+  "light":      $light,
+  "dark":       $dark,
+  "sneed":		$olive,
+);
 
 $min-contrast-ratio:   1.50 !default;
 
