--- a/bootstrap/_variables-finalium.scss
+++ b/bootstrap/_variables-finalium.scss
@@ -8,6 +8,7 @@ $yellow: #ffb300;
 $cyan: #17a2b8;
 $blue: #039be5;
 $green: #00b857;
+$olive: #789922;
 $poktube-blue: #0051b3;
 $teal: #20c997;
 $primary: $blue;
@@ -26,6 +27,7 @@ $gray-800: #393939;
 $gray-900: #242424;
 $light: #f8f9fa;
 $dark: #343a40;
+$secondary: $gray-200;
 $font-family-sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 0.875rem;
 $h1-font-size: $font-size-base * 2.5;
@@ -38,5 +40,17 @@ $body-bg: #f0f0f0;
 $alert-bg-scale: 0%;
 $alert-padding-y: 0.75rem;
 $alert-padding-x: 1.25rem;
+
+$theme-colors: (
+  "primary":    $primary,
+  "secondary":  $secondary,
+  "success":    $success,
+  "info":       $info,
+  "warning":    $warning,
+  "danger":     $danger,
+  "light":      $light,
+  "dark":       $dark,
+  "sneed":		$olive
+);
 
 $min-contrast-ratio:   1.50 !default;
