--- a/templates/default/user.twig
+++ b/templates/default/user.twig
@@ -24,18 +24,19 @@
 	</div>
 	{% endif %}
 	<!-- This prevents the user info box from being extremely tall. Box probably needs to be redesigned... -->
+	<div class="col-12">
 	<div class="p-1 mb-4 bg-custom-profile rounded-3 text-white">
 		<div class="container-fluid py-4">
 			<div class="row">
 				<div class="col-md-11">
 					<img class="float-start rounded" src="{{ profile_image(user.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp">
-					<h1 class="align-top fw-bold">
+					<h1 class="align-top">
 						{{ user.username }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip"
 							data-bs-placement="top" title="{{ __(" squareBracket Partner") }}"
 							style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#patch-check-fill" />
 						</svg>{% endif %}</h1>
-					<p class="fs-4">{{ user.description }}</p>
+					<p class="fs-4 text-break">{{ user.description }}</p>
 				</div>
 				<div class="col-md-1 text-end">
 					<button class="btn btn-warning" type="button" disabled><svg data-bs-toggle="tooltip"
@@ -47,7 +48,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div></div>
 <div class="row">
 	<div class="col-md-8 order-2 order-md-1">
 		<div class="card">
@@ -70,7 +71,7 @@
 				<hr>
 				<dl class="row">
 					<dt class="col-sm-4">{{ __("Last Seen") }}</dt>
-					<dd class="col-sm-8">{{ user.lastview | date('M j, Y') }}</dd>
+					<dd class="col-sm-8">{{ user.lastview | relative_time }}</dd>
 					<dt class="col-sm-4">{{ __("Date Joined") }}</dt>
 					<dd class="col-sm-8">{{ user.joined | date('M j, Y') }}</dd>
 				</dl>
