profile settings page is beyond repair

--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -27,6 +27,11 @@
 	<meta name="theme-color" content="#0065d8">
 	<title>{% block title %}{% endblock %} - squareBracket</title>
 </head>
+<style>
+	.bi {
+		vertical-align: -4px;
+	}
+</style>
 <body>
 <!--<button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
 
