--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
 <head>
-<meta charset="utf-8">
-<title>sbNext</title>
-<link rel="stylesheet" href="/assets/main.css"> 
-{% block customcss %}{% endblock %}
+	<meta charset="utf-8">
+	<title>sbNext</title>
+	<link rel="stylesheet" href="/assets/main.css">
+	{% block customcss %}{% endblock %}
 </head>
 <body>
-<div id="header">
-        <div id="header-links">
-            <a width="121" height="32" href="index.php?frontend=new">
-                <div id="header-logo"></div>
-            </a>
+	<div class="header">
+		<div class="links">
+			<a width="121" height="32" href="index.php?frontend=new">
+				<div class="logo"></div>
+			</a>
 			<a href="gordon.php?frontend=new" class="btn btn-blue header-right">Login</a>
-        </div>
-    </div>
-    <div id="nav">
-        <div id="nav-links">
-            <a href="index.php?frontend=new" class="nav-link nav-selected">Home</a>
-            <a href="/browse.php?frontend=new" class="nav-link">Browse</a>
-            <a href="" class="nav-link">Community</a>
+		</div>
+	</div>
+	<div class="nav">
+		<div class="links">
+			<a href="index.php?frontend=new" class="link selected">Home</a>
+			<a href="/browse.php?frontend=new" class="link">Browse</a>
+			<a href="" class="link">Community</a>
 			{% for menu_link in menu_links %}
-			<a href="{{ menu_link.url }}" class="nav-link">{{ menu_link.name }}</a>
+				<a href="{{ menu_link.url }}" class="link">{{ menu_link.name }}</a>
 			{% endfor %}
-        </div>
-    </div>
-<div id="content">
-{% block content %}{% endblock %}
-<center>
-<h4>squareBracket Pre-Beta/sbNext Preview</h4>
-<p>By squareBracket contributors · 2020-2021</p>
-<p><small>CSS based on the GoodTube website by Diyamund.</small></p>
-</center>
-</div>
+		</div>
+	</div>
+	<div id="content">
+		{% block content %}{% endblock %}
+		<div class="text-center">
+			<h4>squareBracket Pre-Beta/sbNext Preview</h4>
+			<p>By squareBracket contributors · 2020-2021</p>
+			<p><small>CSS based on the GoodTube website by Diyamund.</small></p>
+		</div>
+	</div>
 </body>
-</html> 
+</html>
